Fix SEND Button display weird on Iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,6 @@
     margin-top: 15px ;
     border: none;
     text-align: center;
-    appearance: none;
     -webkit-appearance: none;
 }
 .btn:hover{
